--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	<section id="work">
             <h2>Professional Work</h2>
             <ul>
-                <li><a href="#">https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness</a></li>
-                <li><a href="#"> https://www.dataopssummit-sf.com/speaker/jaimita-bansal/</a></li>
+                <li><a href="https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness">https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness</a></li>
+                <li><a href="https://www.dataopssummit-sf.com/speaker/jaimita-bansal/">https://www.dataopssummit-sf.com/speaker/jaimita-bansal/</a></li>
                 <li>Panelist at Kode with Klossy 2024 mentoring scholars of age 13-18 in CS.</li>
 		<li>All Rounder Gold Medallist in Masters Program 2014-2016</li>
             </ul>
@@ -58,8 +58,8 @@
         <section id="social">
             <h2>Social</h2>
             <ul>
-                <li><a href="#">https://www.linkedin.com/in/jaimita/</a></li>
-                <li><a href="#">https://www.goodreads.com/user/show/55749466-jaimita</a></li>
+                <li><a href="https://www.linkedin.com/in/jaimita/">https://www.linkedin.com/in/jaimita/</a></li>
+                <li><a href="https://www.goodreads.com/user/show/55749466-jaimita">https://www.goodreads.com/user/show/55749466-jaimita</a></li>
                 <li>Private Insta Handle @jimyhaswings</li>
                 <!-- Add more social handles as needed -->
             </ul>
