--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
 	<div class="about-container">
             <div class="profile-photo">
-                <img src="./assets/images/jaimita.jpeg.heic" alt="Jaimita Bansal's Photo" width="300">
+                <img src="assets/images/jaimita.jpeg" alt="Jaimita Bansal's Photo" width="300">
 		Zermatt, Switzerland
 		<p> Reach me at [jimy3bansal@gmail.com] </p>
             </div>
