Making it work on mobiles
Making it work on mobiles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="about-container">
             <div class="profile-photo">
                 <img src="assets/images/jaimita.jpeg" alt="Jaimita Bansal's Photo" width="300">
-		Zermatt, Switzerland
+		<br>Zermatt, Switzerland
 		<p> Reach me at [jimy3bansal@gmail.com] </p>
             </div>
 	<div class="sections-container">
