Picture change, description change
Picture change, description change

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <main>
 	<div class="about-container">
             <div class="profile-photo">
-                <img src="assets/images/jaimita.png" alt="Jaimita Bansal's Photo" width="300">
-		<br>Zermatt, Switzerland
+                <img src="assets/images/jaimita2.png" alt="Jaimita Bansal's Photo" width="300">
+		<br>Grindelwald, Switzerland
 		<p> Reach me at [jimy3bansal@gmail.com] </p>
             </div>
 	<div class="sections-container">
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi, I'm Jaimita Bansal. I am a Lead AI engineer at Goldman Sachs located in New York. I am currently focused on financial data modeling and discovery through natural language. In the past 8 years at GS, I have led and executed machine learning and statistics projects related to synthetic data generation and prediction of delays. Before that, I pursued my Masters in Computer Science from IIT Kanpur finishing thesis in natural language processing under the guidance of Prof. Harish Karnick and completed my Bachelors in Computer Science from Punjab University, Chandigarh.</p>
+            <p>Hi, I'm Jaimita Bansal. I am a Lead AI engineer at Goldman Sachs currently focused on financial data modeling and discovery through natural language. I am based out of New York! </p>
  <p>My philosophy as an engineer is to start simple and apply complex solutions as needed. </p>
 
 <p>While I appreciate science and reason, I am curious about the rest of the world which leads me to travel, explore spirituality, read books and think deeply about any idea in any discipline including sports, music, religion, art and politics - in that order.
