--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
 	<div class="about-container">
             <div class="profile-photo">
-                <img src="assets/images/jaimita2.png" alt="Jaimita Bansal's Photo" width="300">
+                <img src="assets/images/jaimita.png" alt="Jaimita Bansal's Photo" width="300">
 		<br>Grindelwald, Switzerland
 		<p> Reach me at [jimy3bansal@gmail.com] </p>
             </div>
