--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi, I'm Jaimita Bansal. I am a Lead AI engineer at Goldman Sachs currently focused on financial data modeling and discovery through natural language. I am based out of New York! </p>
- <p>My philosophy as an engineer is to start simple and apply complex solutions as needed. </p>
+            <p>Hi, I'm Jaimita Bansal. I am a Lead AI engineer at Goldman Sachs currently focused on financial data modeling and data discovery through natural language. Before this, I have also lead projects on applied ML solutions for predicting and creating operational efficiences in big data flows of Data Lake. I have a Master's in Computer Science and deep passion towards applying a combination of NLP, Stats, Computer Science and common sense to real world problems. </p>
+ <p>My philosophy as an engineer and applied Machine Learning scientist is to start simple and apply complex solutions as needed. </p>
 
-<p>While I appreciate science and reason, I am curious about the rest of the world which leads me to travel, explore spirituality, read books and think deeply about any idea in any discipline including sports, music, religion, art and politics - in that order.
+<p>While I appreciate science and reason, I am curious about the rest of the world which leads me to travel, explore spirituality, read books and think deeply about any idea in multiple disciplines including sports, music, religion, art and politics.
 </p>
 
         </section>
@@ -38,7 +38,8 @@
             <h2>Professional Work</h2>
             <ul>
                 <li><a href="https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness">https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness</a></li>
-                <li><a href="https://www.dataopssummit-sf.com/speaker/jaimita-bansal/">https://www.dataopssummit-sf.com/speaker/jaimita-bansal/</a></li>
+                <li><a href="https://developer.gs.com/blog/posts/synthetic-data-generator">https://developer.gs.com/blog/posts/synthetic-data-generator</a></li>
+		<li><a href="https://www.dataopssummit-sf.com/speaker/jaimita-bansal/">https://www.dataopssummit-sf.com/speaker/jaimita-bansal/</a></li>
                 <li>Panelist at Kode with Klossy 2024 mentoring scholars of age 13-18 in CS.</li>
 		<li>All Rounder Gold Medallist in Masters Program 2014-2016</li>
             </ul>
