--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Hi, I'm Jaimita Bansal. I am a Lead AI engineer at Goldman Sachs currently focused on financial data modeling and data discovery through natural language. Before this, I have also lead projects on applied ML solutions for predicting and creating operational efficiences in big data flows of Data Lake. I have a Master's in Computer Science and deep passion towards applying a combination of NLP, Stats, Computer Science and common sense to real world problems. </p>
  <p>My philosophy as an engineer and applied Machine Learning scientist is to start simple and apply complex solutions as needed. </p>
 
-<p>While I appreciate science and reason, I am curious about the rest of the world which leads me to travel, explore spirituality, read books and think deeply about any idea in multiple disciplines including sports, music, religion, art and politics.
+<p>I am curious about the rest of the world which leads me to travel, explore spirituality, read books and think deeply about any idea in multiple disciplines including sports, music, religion, art and politics.
 </p>
 
         </section>
