--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <main>
 	<div class="about-container">
             <div class="profile-photo">
-                <img src="assets/images/jaimita.png" alt="Jaimita Bansal's Photo" width="300">
-		<br>Grindelwald, Switzerland
+                <img src="assets/images/jimy_oxford.png" alt="Jaimita Bansal's Photo" width="300">
 		<p> Reach me at [jimy3bansal@gmail.com] </p>
             </div>
 	<div class="sections-container">
