--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 	<section id="work">
             <h2>Professional Work</h2>
             <ul>
-                <li><a href="https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness">https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness</a></li>
-                <li><a href="https://developer.gs.com/blog/posts/synthetic-data-generator">https://developer.gs.com/blog/posts/synthetic-data-generator</a></li>
+                <li><a href="https://developer.gs.com/blog/posts/synthetic-data-generator">[2024]https://developer.gs.com/blog/posts/synthetic-data-generator</a></li>
 		<li><a href="https://www.dataopssummit-sf.com/speaker/jaimita-bansal/">https://www.dataopssummit-sf.com/speaker/jaimita-bansal/</a></li>
                 <li>Panelist at Kode with Klossy 2024 mentoring scholars of age 13-18 in CS.</li>
+		<li><a href="https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness">[2021]https://developer.gs.com/blog/posts/harnessing-machine-learning-improve-data-lake-client-happiness</a></li>
 		<li>All Rounder Gold Medallist in Masters Program 2014-2016</li>
             </ul>
         </section>
